# taffy

./: Api.hs  ConstraintSearch.hs  Constraints.hs  FUIP  Func.hs  Lang.hs  README.md  Sat.hs  fourkind.hyf  go.sh  pom.xml  taffy.cabal  todo.md
scala/src/main/scala/com/sciolizer/taffy/: Domain.scala  DynamicSolver.scala  ImplicationGraph.scala  Isos.scala  NoGood.scala  Problem.scala  Ranger.scala  Read.scala  ReadWrite.scala  Revisable.scala  Solver.scala  SuperSimpleSolver.scala  Variable.scala
scala/src/taffy/: Domain.scala  ImplicationGraph.scala  NoGood.scala  Problem.scala  Ranger.scala  Read.scala  ReadWrite.scala  Solver.scala  SuperSimpleSolver.scala
scala/src/taffy/domains/: BoundedSum.scala  Disjunction.scala
scala/src/taffy/examples/: BooleanExactCover.scala  Disjunction.scala  ExactCover.scala  Sat.scala
scala/src/test/scala/com/sciolizer/taffy/: DynamicSolverSuite.scala  IsosSuite.scala  (+1 more)
src/: Api.hs  Appl.hs  Debugger.hs  LightUp.hs  Loopy.hs  NewSolver.hs  SatExample.hs  SatExampleMain.hs  Simul.hs  Solver.hs  Types.hs  VertexColoring.hs
src/main/scala/com/sciolizer/taffy/: ConstraintInstantiator.scala  DynamicSolver.scala  ImplicationGraph.scala  Inference.scala  Instantiator.scala  Isos.scala  NullInference.scala  Problem.scala  Ranger.scala  Read.scala  ReadWrite.scala  Solver.scala  StackedSolver.scala  SuperSimpleSolver.scala  Variable.scala  VariableInstantiator.scala
src/test/scala/com/sciolizer/taffy/: DynamicSolverSuite.scala  IsosSuite.scala  MapSuite.scala  StackedSolverSuite.scala  SuperSimpleSolverSuite.scala
(+28 files in other folders)
