name:                taffy
version:             0.1.0.0
synopsis:            Dynamic constraint solver
description:         General purpose constraint solver. Based off the chaff algorithm, but with three important differences: fully parameterized constraint type (not limited to boolean disjunctions), symmetric learning, and support for creation of new variables and clauses during the search.
homepage:            https://github.com/sciolizer/taffy
license:             MIT
-- license-file:        LICENSE
author:              Joshua Ball
maintainer:          JoshBBall@gmail.com
-- copyright:           
category:            Control
build-type:          Simple
cabal-version:       >=1.8

executable taffy-sat-example
  main-is: SatExampleMain.hs
  hs-source-dirs: src
  build-depends:       base ==4.5.*,
                       containers ==0.4.*,
                       lens ==3.7.*,
                       mtl ==2.1.*,
                       transformers ==0.3.*

library
  hs-source-dirs: src
  exposed-modules:     SatExample,
                       Solver
  build-depends:       base ==4.5.*,
                       containers ==0.4.*,
                       lens ==3.7.*,
                       mtl ==2.1.*,
                       transformers ==0.3.*
